force-app/main/default/objects/Passenger__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline</label>
    <referenceTo>Airline__c</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers</relationshipName>
    <type>Lookup</type>
</CustomField>