force-app/main/default/objects/Passenger__c/fields/Eligible_for_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Voucher__c</fullName>
    <formula>IF( Age_of_Passenger__c &lt;18,  IMAGE(&quot;/resource/green&quot;, &quot;green&quot; , 30, 30) , IMAGE(&quot;/resource/Red&quot;, &quot;green&quot; , 30, 30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Voucher</label>
    <type>Text</type>
</CustomField>