force-app/main/default/objects/Passenger__c/fields/Nagpur_Flight_Count__c.field-meta.xml
<CustomField>
    <fullName>Nagpur_Flight_Count__c</fullName>
    <label>Nagpur Flight Count</label>
    <summaryForeignKey>Book_Flight__c.Passenger__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>